--- a/small/src/main/resources/application.yml
+++ b/small/src/main/resources/application.yml
@@ -6,7 +6,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/litemall
+    url: jdbc:mysql://localhost:3306/cskaoyanmall?serverTimezone=GMT&useSSL=false
     username: root
-    password: 123456
-    driver-class-name: com.mysql.jdbc.Driver
+    password: xjtuse
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
