--- a/small/pom.xml
+++ b/small/pom.xml
@@ -23,7 +23,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -35,7 +34,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
         <!--		mysql驱动-->
         <dependency>
             <groupId>mysql</groupId>
@@ -61,9 +59,18 @@
             <artifactId>log4j</artifactId>
             <version>1.2.12</version>
         </dependency>
+        <!--        文件上传-->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
     </dependencies>
-
-
     <build>
         <plugins>
             <plugin>
@@ -72,5 +79,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
