--- a/small/src/main/resources/application.yml
+++ b/small/src/main/resources/application.yml
@@ -4,6 +4,7 @@ server:
   servlet:
     context-path: /admin
 
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/cskaoyanmall?serverTimezone=GMT&useSSL=false
@@ -11,3 +12,5 @@ spring:
     password: xjtuse
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
+  resources:
+    static-locations: classpath:static/
