TMD被这数据库类型和主键自增坑惨了，不愧是干过PM的 完成商品修改、增加相关接口

--- a/small/src/main/resources/application.yml
+++ b/small/src/main/resources/application.yml
@@ -12,3 +12,7 @@ spring:
     password: xjtuse
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
+
+logging:
+  level:
+    com: DEBUG
